fixed horizaontal scrollbar

--- a/melin.client/src/index.css
+++ b/melin.client/src/index.css
@@ -15,6 +15,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  width: 100%;
+}
+
+
 /*a {*/
 /*  font-weight: 500;*/
 /*  color: #73ccb1;*/
@@ -25,7 +30,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  /*min-width: 320px;*/
 }
 
 h1 {
